--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,48 @@
-#container {
-  text-align: center;
+@import "~leaflet/dist/leaflet.css";
 
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+
+.main-cont {
+  width:100vw;
+  height:100%;
+  display:flex;
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+.map-container {
+//  margin:1%;
+ height: 100%;
+ width:60%
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
+.map-frame {
+  border: 2px solid black;
+  height: 100%;
 
-  color: #8c8c8c;
-
-  margin: 0;
 }
 
-#container a {
-  text-decoration: none;
+#map {
+  height: 100%;
+}
+
+.tableList{
+  width:40%;
+  border:1px solid white;
+  padding:5%;
+  overflow:scroll
+ 
+}
+.item{
+  display:flex;
+  justify-content:space-around;
+  background-color:black;
+  padding:1% 1.5%;
+  &:hover{
+    background-color:white;
+    color:black;
+    cursor:pointer
+  };
+  &:active{
+   background-color:black;
+   color:white;
+   user-select:none
+  }
 }
